[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "venom-cache"
version = "1.0.0"
description = "CLI tool for detecting web cache poisoning vulnerabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []
authors = [
    {name = "Aidan"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.scripts]
venom-cache = "venom_cache.cli:main"

[project.urls]
Homepage = "https://github.com/invaen/venom-cache"

[tool.setuptools.packages.find]
include = ["venom_cache*"]
